# ytmdl-tui

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
app/: __init__.py  main.py
ytmdl_tui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
