[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytmdl-tui"
version = "1.0.0"
description = "tui for downloading music from youTube music with metadata"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "aor_rex"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "textual>=0.48.0",
    "yt-dlp>=2023.12.30",
]

[project.scripts]
ytmdl-tui = "ytmdl_tui.main:main"

[project.urls]
Homepage = "https://github.com/aor-rex/ytmdl-tui"